--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "glob": "^7.0.3",
     "gulp": "^3.9.0",
     "gulp-image-optimization": "^0.1.3",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-minify-css": "^1.2.2",
