--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -7,6 +7,7 @@
 			[{ "src": "./forum/src", "expose": "misago" } ]
 		],
 		"transform-class-properties",
-		'transform-runtime'
+		'transform-runtime',
+		"react-hot-loader/babel"
 	]
 }
