--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "forumTest": "webpack-dev-server --config webpack/forumTest.js",
-        "homeTest": "webpack-dev-server --config webpack/homeTest.js"
+        "homeTest": "webpack-dev-server --config webpack/homeTest.js",
+        "homeHot": "webpack-dev-server --config webpack/home.hot.js"
     },
     "author": "Rafal Piton",
     "license": "GPL-2.0",
@@ -76,6 +77,7 @@
         "less-loader": "^2.2.3",
         "mochify": "^2.14.3",
         "postcss-loader": "^1.0.0",
+        "react-hot-loader": "^3.0.0-beta.6",
         "style-loader": "^0.13.1",
         "url-loader": "^0.5.7",
         "vinyl-buffer": "^1.0.0",
