--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*/__pycache__/
 *.py[cod]
 *$py.class
 # C extensions
@@ -14,7 +15,7 @@ lib64/
 parts/
 sdist/
 var/
-*.egg-info/
+*.ermgg-info/
 .installed.cfg
 *.egg
 
