--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,14 +1,17 @@
 {
-	"presets": ["es2015", "stage-2", "react"],
+	"presets": ["es2015", "react", "stage-2"],
 	"plugins": 
 	[
 		[
 			"babel-plugin-module-alias", 
-			[{ "src": "./forum/src", "expose": "misago" } ]
+			[
+				{ "src": "./forum/src", "expose": "misago" },
+				{ "src": "./home/src", "expose": "home" }
+			]
 		],
-		["import", { libraryName: "antd", style: "css" }],
+		["import", { "libraryName": "antd", "style": true }],
 		"transform-class-properties",
-		'transform-runtime',
+		"transform-runtime",
 		"react-hot-loader/babel"
 	]
 }
