--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "forumTest": "webpack-dev-server --config webpack/forumTest.js",
     "homeTest": "webpack-dev-server --config webpack/homeTest.js",
-    "homeHot": "webpack-dev-server --config webpack/home.hot.js"
+    "homeHot": "webpack-dev-server --config webpack/home.hot.js",
+    "homeBuild": "webpack --config webpack/homeBuild.js"
   },
   "author": "Rafal Piton",
   "license": "GPL-2.0",
