--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-router": "^2.2.4",
     "redux": "^3.0.5",
     "redux-batched-actions": "^0.1.2",
+    "video.js": "^5.12.6",
     "waypoints": "^4.0.1",
     "zxcvbn": "^4.2.0"
   },
